deploy: a461a8c5ade694b233d1a4111a0d431ceb9e4a75

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-		<title>Bohrok Animations</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+		<title>Bohrok Animations</title>
 		<style>
 			* {
 				margin: 0;
@@ -46,18 +46,18 @@
 		<div class="main">
 			<div class="player">
 				<object
-					classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-					codebase="http://active.macromedia.com/flash5/cabs/swflash.cab#version=5,0,0,0"
+					classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000"
 					width="770"
 					height="425"
 				>
 					<param name="movie" value="bohrokanimations.swf">
+					<param name="bgcolor" value="#000000">
 					<embed
 						type="application/x-shockwave-flash"
-						pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
 						width="770"
 						height="425"
 						src="bohrokanimations.swf"
+						bgcolor="#000000"
 					>
 				</object>
 			</div>
