--- a/Chronicles.html
+++ b/Chronicles.html
@@ -86,25 +86,25 @@
 <h2 id="victory-party-cancelled">Victory Party Cancelled!</h2>
 <h3 id="new-foe-surfaces-in-ta-koro">New foe surfaces in Ta-Koro</h3>
 <p><em>By Takua</em></p>
-<p>Celebrations were cut short today when swarms of unknown creatures appeared in Ta-Koro, with the apparent purpose of leveling the village. “They came out of nowhere”, said Turaga Vakama, still visibly shaken from the encounter, “Luckily, we reached the Toa in time!”</p>
-<p>During the attack, Turaga Vakama had the presence of mind to send for the Toa, who were still recovering from their remarkable victory over Makuta. Tahu, Kopaka, Lewa, Onua, Gali and Pohatu rushed to the aid of Ta-Koro just in time to avert certain disaster. The Toa managed to use their now legendary elemental powers to disable the swarm of creatures known as “Bohrok”.</p>
-<p>“Before the Toa arrived to defeat Makuta,” explained Turaga Vakama. “we [the Turaga] couldn’t believe there could be anything worse than the Rahi. Today we were proven wrong.”</p>
-<p>“Apparently, the Turaga have always known the legend of the Bohrok,” explained Lewa grimly. “Now we get to find out the reality of the swarms.”</p>
+<p>Celebrations were cut short today when swarms of unknown creatures appeared in Ta-Koro, with the apparent purpose of leveling the village. &quot;They came out of nowhere&quot;, said Turaga Vakama, still visibly shaken from the encounter, &quot;Luckily, we reached the Toa in time!&quot;</p>
+<p>During the attack, Turaga Vakama had the presence of mind to send for the Toa, who were still recovering from their remarkable victory over Makuta. Tahu, Kopaka, Lewa, Onua, Gali and Pohatu rushed to the aid of Ta-Koro just in time to avert certain disaster. The Toa managed to use their now legendary elemental powers to disable the swarm of creatures known as &quot;Bohrok&quot;.</p>
+<p>&quot;Before the Toa arrived to defeat Makuta,&quot; explained Turaga Vakama. &quot;we [the Turaga] couldn&#39;t believe there could be anything worse than the Rahi. Today we were proven wrong.&quot;</p>
+<p>&quot;Apparently, the Turaga have always known the legend of the Bohrok,&quot; explained Lewa grimly. &quot;Now we get to find out the reality of the swarms.&quot;</p>
 <h2 id="tahnok-surround-po-koro-matoran-lost-in-fray">Tahnok Surround Po-Koro, Matoran lost in fray</h2>
 <h3 id="hafu-hailed-as-hero">Hafu hailed as hero</h3>
 <p><em>By Takua</em></p>
 <p>Hafu, the famed carver from Po-Koro, was trapped outside the village today in a desperate attempt to protect his home and fellow Matoran from a rapidly approaching Tahnok swarm.</p>
-<p>“The last I saw, the Fire Bohrok were closing in on him,” explained Huki, “but the smoke and the ash were so thick that no one was able to see what happened.”</p>
+<p>&quot;The last I saw, the Fire Bohrok were closing in on him,&quot; explained Huki, &quot;but the smoke and the ash were so thick that no one was able to see what happened.&quot;</p>
 <p>Scouts from Po-Koro had spotted the Bohrok earlier, but the swarm was moving so quickly that Turaga Onewa had no time to evacuate his village. The only alternative was to block the entrance to Po-Koro by using the stone carvings on the Path of Prophesy. Hafu, the carver who created the Path, volunteered to topple the giant stones in order to save the village. Turaga Onewa was gathering Matoran to protect Hafu when he heard the commotion.</p>
-<p>“The Tahnok reached us much faster than we anticipated,” said the Turaga. “Fortunately, Hafu kept his head and acted quickly. His bravery may have saved the village.”</p>
-<p>When asked if he thought that Hafu would be found, Turaga Onewa reassured the villagers. “Pohatu, along with Gali and Kopaka, have been defending Po-Wahi against a particularly fierce group of Tahnok - which is why we had a much smaller swarm to face today. I’m confident that once Pohatu returns, he will find Hafu and bring him back to us safely.”</p>
+<p>&quot;The Tahnok reached us much faster than we anticipated,&quot; said the Turaga. &quot;Fortunately, Hafu kept his head and acted quickly. His bravery may have saved the village.&quot;</p>
+<p>When asked if he thought that Hafu would be found, Turaga Onewa reassured the villagers. &quot;Pohatu, along with Gali and Kopaka, have been defending Po-Wahi against a particularly fierce group of Tahnok - which is why we had a much smaller swarm to face today. I&#39;m confident that once Pohatu returns, he will find Hafu and bring him back to us safely.&quot;</p>
 <p><em>Watch video: Tahnok Surround Po-Koro, Matoran lost in fray</em></p>
 <h2 id="turaga-shares-knowledge-of-bohrok">Turaga shares knowledge of Bohrok</h2>
 <h3 id="vakama-explains-mysterious-powers-of-krana">Vakama Explains Mysterious Powers of Krana</h3>
 <p><em>By Takua</em></p>
 <p>In recent months, Mata Nui has fallen prey to swarms of strange creatures called Bohrok. These Bohrok are said to be driven by the krana they carry inside them - but little is known about these krana. What do they do? Where did they come from? Can even the Toa overcome them? Turaga Vakama shared his vast knowledge of Mata Nui truth and legend in the hope of answering these vital questions…</p>
 <p>T: Vakama, Turaga of Ta-koro, what is a krana?</p>
-<p>V: The krana are the true power behind the Bohrok swarms. They provide the direction and inspiration to each Bohrok. There are eight varieties, each having different powers. When placed inside a Bohrok, a krana drives the Bohrok to perform tasks. Krana can even be said to be the “brains” of the Bohrok.</p>
+<p>V: The krana are the true power behind the Bohrok swarms. They provide the direction and inspiration to each Bohrok. There are eight varieties, each having different powers. When placed inside a Bohrok, a krana drives the Bohrok to perform tasks. Krana can even be said to be the &quot;brains&quot; of the Bohrok.</p>
 <p>T: Can the krana function independently of the Bohrok, or do they act more like the Kanohi Masks of Power?</p>
 <p>V: We have seen a number of instances where krana have attached themselves to their foes and taken control of their bodies. Perhaps the most tragic example of this was in Le-koro, not so long ago… It seems that when a Bohrok senses danger, it sets its krana free, and the krana attempts to add its foe to the swarm. Whether there is any way to resist the power of the krana, I do not yet know.</p>
 <p>T: These krana are truly a terrible menace to all who dwell on Mata Nui.</p>
@@ -115,22 +115,22 @@
 <p><em>By Takua</em></p>
 <p>Pohatu returned to his village just in time to save the Matoran, Hafu, from certain doom at the hands of a swarm of Tahnok. The fire Bohrok had surrounded the helpless Matoran just outside of Po-Koro, but using the powers of his Kanohi, Pohatu snatched Hafu out of danger and returned him to the village unharmed.</p>
 <p>Hafu was in a precarious situation after attempting to block the Tahnok from entering Po-Koro using his very own Path of Prophesies carvings. Sacrificing not only his art, but potentially his life, Hafu ventured from the safety of the village to dismantle the famed statues. The statues blocked the entrance from the Bohrok, protecting many Matorans from a potential disaster. The villagers of Po-Koro watched in horror from the gates as Hafu disappeared from sight.</p>
-<p>“I knew the Toa were close by, and chances were good that Pohatu would be returning soon,” explained Turaga Onewa, “and like a Toa, he was here to help us in our darkest hour!”</p>
+<p>&quot;I knew the Toa were close by, and chances were good that Pohatu would be returning soon,&quot; explained Turaga Onewa, &quot;and like a Toa, he was here to help us in our darkest hour!&quot;</p>
 <p>The grateful Po-Koro Matoran were overjoyed to have Hafu back in the village.</p>
-<p>“The Tahnok are still out there,” says Huki, “but we’re just glad to have Hafu back safe and sound with us!”</p>
+<p>&quot;The Tahnok are still out there,&quot; says Huki, &quot;but we&#39;re just glad to have Hafu back safe and sound with us!&quot;</p>
 <p><em>Watch video: Hafu Saved in Daring Rescue</em></p>
 <h2 id="new-invention-saves-onu-koro">New Invention Saves Onu-Koro</h2>
-<h3 id="boxor-drives-gahlok-swarm-from-city">“Boxor” Drives Gahlok Swarm from City</h3>
+<h3 id="boxor-drives-gahlok-swarm-from-city">&quot;Boxor&quot; Drives Gahlok Swarm from City</h3>
 <p><em>By Takua</em></p>
 <p>After a vicious squad of Water Bohrok flooded Onu-Koro recently, a Matoran named Nuparu made an important discovery that may turn the tide against the Bohrok menace.</p>
-<p>Nuparu, a tunnel engineer from Onu-Koro, constructed a vehicle called the Boxor that uses a swift punching motion to knock a Bohrok’s Krana loose. The Onu- Matoran made the discovery when he came across a krana-less Gahlok while trapped with Onepu and Taipu in an evacuated part of Onu-Koro. Once Nuparu realized that the Bohrok were simply transports for the krana, he used his knowledge to give the Matoran an advantage. After constructing the Boxor, he beat back the aggressive Gahlok swarm, driving them out of the underground city and stopping the flood.</p>
-<p>Onu-Matorans were delighted to return to their homes safely. “Finally we have a defense against these monsters,” Onepu said. “Maybe now we can rid Mata Nui of the Bohrok and go back to more peaceful times.”</p>
+<p>Nuparu, a tunnel engineer from Onu-Koro, constructed a vehicle called the Boxor that uses a swift punching motion to knock a Bohrok&#39;s Krana loose. The Onu- Matoran made the discovery when he came across a krana-less Gahlok while trapped with Onepu and Taipu in an evacuated part of Onu-Koro. Once Nuparu realized that the Bohrok were simply transports for the krana, he used his knowledge to give the Matoran an advantage. After constructing the Boxor, he beat back the aggressive Gahlok swarm, driving them out of the underground city and stopping the flood.</p>
+<p>Onu-Matorans were delighted to return to their homes safely. &quot;Finally we have a defense against these monsters,&quot; Onepu said. &quot;Maybe now we can rid Mata Nui of the Bohrok and go back to more peaceful times.&quot;</p>
 <p><em>Watch video: New Invention Saves Onu-Koro</em></p>
 <h2 id="island-wildlife-on-the-move">Island Wildlife on the Move</h2>
 <h3 id="local-naturalists-concerned">Local Naturalists Concerned</h3>
 <p><em>By Takua</em></p>
 <p>The arrival of the Bohrok swarms has taken a serious toll on island creatures. Gahlok activity off the coast has driven a number of Takea closer to the shore, where they menace diving Taku and disrupt the migration of the Ruki schools.</p>
-<p>One Ga-Koro fisherman responded, “In addition to threatening our homes, the Bohrok are also threatening our livelihood!”</p>
+<p>One Ga-Koro fisherman responded, &quot;In addition to threatening our homes, the Bohrok are also threatening our livelihood!&quot;</p>
 <p>The deforestation of the Le-Wahi jungle has sent herds of Vako and Fusa wandering deep into the desert to compete for food with the native Husi flocks. The Hoi and Kuna have lost the shelter of the trees, making them easy prey for Rahi. Destruction of Fikou webs has caused the tree spiders to flee to the high jungle canopy, territory of the swift-flying Goko-Kahu.</p>
 <p>The Ussal-riding defense force of Onu-Koro has had its hands full with a surge in Kofo-Jaga, chased from their hidden lairs, while scouts warn that the mountain-shaking of the Nuhvok and Pahrak has brought a few dangerous Makika toads out of their caves. In fiery Ta-Wahi, besieged by the frozen Kohrak, the tunnels of displaced Hoto firebugs have been creating sinkholes and causing hut collapses. Even the fierce Hikaki have been forced to abandon their ancient nesting grounds.</p>
 <p>The Bohrok swarms are a threat to every creature of Mata Nui, from Matoran to Rahi. Hopefully, the swarms will be contained soon before irreparable damage is done to the island.</p>
